--- a/lab1/battleship.html
+++ b/lab1/battleship.html
@@ -22,6 +22,7 @@
         <span class="status" id="status"></span>
         <button id="ready-button" onclick="runGame()">Ready!</button>
         <button id="reset-button" onclick="init()">Reset!</button>
+        <span class="turn" id="turn-counter"></span>
     </div>
     
 
