--- a/lab1/battleship.html
+++ b/lab1/battleship.html
@@ -9,12 +9,16 @@
         <h2>Player</h2>
         <span class="health" id="p1-health"></span>
         <div class="battleship-grid" id="grid-1" owner="p1"></div>
+        <span class="counter" id="p2-hits"></span>
+        <span class="counter" id="p2-misses"></span>
     </div>
 
     <div class="container">
         <h2>Computer</h2>
         <span class="health" id="p2-health"></span>
         <div class="battleship-grid" id="grid-2" owner="p2"></div>
+        <span class="counter" id="p1-hits"></span>
+        <span class="counter" id="p1-misses"></span>
     </div>
 
     <div class="controls">
