--- a/lab1/battleship.html
+++ b/lab1/battleship.html
@@ -24,6 +24,7 @@
     <div class="controls">
         <span class="status" id="status"></span>
         <button id="ready-button" onclick="runGame()">Ready!</button>
+        <button id="rotate-button" onclick="rotateButton()">Rotate ship</button>
         <button id="reset-button" onclick="init()">Reset!</button>
         <span class="turn" id="turn-counter"></span>
     </div>
