--- a/lab1/battleship.html
+++ b/lab1/battleship.html
@@ -4,7 +4,7 @@
     <title>Battleship Game</title>
     <link rel="stylesheet" href="./battleship.css">
 </head>
-<body>
+<body class="theme-light">
     <div class="container">
         <h2>Player</h2>
         <span class="health" id="p1-health"></span>
@@ -24,7 +24,6 @@
     <div class="controls">
         <span class="status" id="status"></span>
         <button id="ready-button" onclick="runGame()">Ready!</button>
-        <button id="rotate-button" onclick="rotateButton()">Rotate Ship</button>
         <button id="reset-button" onclick="init()">Reset!</button>
         <span class="turn" id="turn-counter"></span>
     </div>
