--- a/lab1/battleship.html
+++ b/lab1/battleship.html
@@ -27,8 +27,13 @@
         <button id="reset-button" onclick="init()">Reset!</button>
         <span class="turn" id="turn-counter"></span>
     </div>
-    
 
+    <div class="footer">
+        <span>CPS630 - Battleship</span>
+        <span>Owen Goodwin</span>
+        <span>2024-02-12</span>
+    </div>
+    
     <div class="ship" id="ghost"></div>
 
     <script src="battleship.js"></script>
