--- a/lab1/battleship.html
+++ b/lab1/battleship.html
@@ -33,27 +33,27 @@
         <div class="group">
             <label for="five">5 cells</label>
             <label for="five">Carriers:</label>
-            <input type="number" max="5" min="0" value="1" name="five" id="carriers" onchange="getShipConfig()">
+            <input class="ship-count" type="number" max="5" min="0" value="1" name="five" id="carriers" onchange="getShipConfig()">
         </div>
         <div class="group">
             <label for="four">4 cells</label>
             <label for="four">Battleships:</label>
-            <input type="number" max="5" min="0" value="2" name="four" id="battleships" onchange="getShipConfig()">
+            <input class="ship-count" type="number" max="5" min="0" value="2" name="four" id="battleships" onchange="getShipConfig()">
         </div>
         <div class="group">
             <label for="three">3 cells</label>
             <label for="three">Cruisers:</label>
-            <input type="number" max="5" min="0" value="3" name="three" id="cruisers" onchange="getShipConfig()">
+            <input class="ship-count" type="number" max="5" min="0" value="3" name="three" id="cruisers" onchange="getShipConfig()">
         </div>
         <div class="group">
             <label for="two">2 cells</label>
             <label for="two">Destroyers:</label>
-            <input type="number" max="5" min="0" value="4" name="two" id="destroyers" onchange="getShipConfig()">
+            <input class="ship-count" type="number" max="10" min="0" value="4" name="two" id="destroyers" onchange="getShipConfig()">
         </div>
         <div class="group">
             <label for="one">1 cell </label>
             <label for="one">Submarines:</label>
-            <input type="number" max="10" min="0" value="0" name="one" id="submarines" onchange="getShipConfig()">
+            <input class="ship-count" type="number" max="10" min="0" value="0" name="one" id="submarines" onchange="getShipConfig()">
         </div>
         <button id="randomize-button" onclick="getShipConfig()">Randomize Positions</button>
     </div>
